--- a/client/src/components/variations-components/Variation.module.css
+++ b/client/src/components/variations-components/Variation.module.css
@@ -1,22 +1,24 @@
 .variationAndType {
   font-weight: 400;
   font-size: 14px;
+  margin-bottom: 10px;
+  margin-top: 15px;
 }
 
 .cardsSlider {
   position: relative;
-  width: 347px;
+  width: 100%;
   height: 126px;
   overflow: hidden;
-  margin: 0 auto;
+  margin: 0 0;
 }
 
 .cardsSliderWrapper {
   display: flex;
   flex-direction: row;
   position: absolute;
-  left: 40px;
-  transition-duration: 0.5s;
+  /* left: 30px; */
+  transition-duration: 0.7s;
   position: relative;
 }
 
@@ -25,6 +27,20 @@
   position: absolute;
   height: 100%;
 }
+
+.next button, .prev button {
+  width: 25px;
+  padding: 0;
+}
+
+.next button:focus, .prev button:focus {
+  outline: none;
+}
+
+.next button:hover, .prev button:hover {
+  cursor: pointer;
+}
+
 .next {
   right: 0
 }
@@ -50,14 +66,24 @@
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   margin: 5px;
   width: 76px;
   height: 116px;
   border: 1px solid rgb(205, 205, 205);
   border-radius: 5px;
+  align-items: center;
+  justify-content: center;
 }
 
 .thumbnail {
-  width: 70px;
+  width: 58px;
+  height: 64px;
+}
+
+.price {
+  font-size: 13px;
+  padding-top: 6px;
 }
