--- a/client/src/components/price-components/Price.module.css
+++ b/client/src/components/price-components/Price.module.css
@@ -70,3 +70,39 @@
 .showMeHow:hover, .learnMore:hover {
   color: #001E73;
 }
+
+.modal {
+  width: 600px;
+  height: 900px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #FFF;
+  z-index: 4;
+}
+
+.modal img {
+  width: 100%;
+  height: 100%;
+}
+
+.x {
+  position: fixed;
+  right: 15px;
+  top: 10px;
+}
+
+.x:hover {
+  cursor: pointer;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 3;
+}
