add airpods max default props

--- a/client/src/components/stock-shipping-components/StockShipping.module.css
+++ b/client/src/components/stock-shipping-components/StockShipping.module.css
@@ -5,10 +5,17 @@
   height: 111px;
 }
 
-.inStock {
+.backordered {
   font-size: 13px;
   font-weight: 700;
   color: #96291A;
+  margin-bottom: 5px;
+}
+
+.inStock {
+  font-size: 13px;
+  font-weight: 700;
+  color: #408806;
   margin-bottom: 5px;
 }
 
