change horizontal rule to border bottoms

--- a/client/src/components/protection-components/Protection.module.css
+++ b/client/src/components/protection-components/Protection.module.css
@@ -3,6 +3,9 @@
   flex-direction: column;
   justify-content: space-evenly;
   height: 154px;
+  border-bottom: 1px solid #c5cbd5;
+  padding-bottom: 8px;
+  padding-top: 7px;
 }
 
 .protectionContainer {
