--- a/client/src/components/addtocart-components/AddToCart.module.css
+++ b/client/src/components/addtocart-components/AddToCart.module.css
@@ -3,6 +3,9 @@
   flex-direction: column;
   justify-content: center;
   height: 100px;
+  border-bottom: 1px solid #c5cbd5;
+  padding-bottom: 8px;
+  padding-top: 7px;
 }
 
 .btnContainer {
