--- a/client/src/components/variations-components/Variation.module.css
+++ b/client/src/components/variations-components/Variation.module.css
@@ -1,5 +1,8 @@
 .variationsContainer {
-  height: 183px;
+  height: 167px;
+  border-bottom: 1px solid #c5cbd5;
+  padding-bottom: 29px;
+  padding-top: 10px;
 }
 
 .variationAndType {
